2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make application/x-shared-library-la a
	subclass of text/plain (#10203). Thanks to Yevgen Muntyan
	<muntyan@tamu.edu>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* update-mime-database.1: remove ROX from "See Also" manpage section
	(#10131). Thanks to Sebastian Dröge <slomo@circular-chaos.org>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: fix RealVideo document MIME type (#10122).
	Thanks to Frederic Crozat <fcrozat@mandriva.com>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add XPS MIME type (#10027).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make application/m3u an alias for
	audio/x-mpegurl (#10061), and make audio/x-mpeg an alias for
	audio/mpeg.
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment for Adobe FrameMaker document
	(#10086), brand FrameMaker MIF document to Adobe.
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment for ARC archive (#10084).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment for XMCD CD database (#10074).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-02-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.m2t as a pattern for MPEG 2 files
	(GNOME bug #406196)

=== shared-mime-info 0.20 ===

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: version 0.20

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make dia a sub-class of application/xml,
	not the alias text/xml

2007-02-06  Bastien Nocera  <hadess@hadess.net>
