@@ -389,6 +389,17 @@ command to generate the output files.
     <glob pattern="*.doc"/>
     <alias type="application/vnd.ms-word"/>
   </mime-type>
+  <mime-type type="application/vnd.ms-tnef">
+    <_comment>TNEF message</_comment>
+    <acronym>TNEF</acronym>
+    <expanded-acronym>Transport Neutral Encapsulation Format</expanded-acronym>
+    <magic priority="50">
+      <match type="little32" value="0x223e9f78" offset="0"/>
+    </magic>
+    <glob pattern="*.tnef"/>
+    <glob pattern="*.tnf"/>
+    <alias type="application/ms-tnef"/>
+  </mime-type>
   <mime-type type="application/vnd.stardivision.calc">
     <_comment>StarCalc spreadsheet</_comment>
     <glob pattern="*.sdc"/>
